# bilix

./: pyproject.toml
bilix/cli/: main.py
bilix/download/: base_downloader_part.py
bilix/sites/bilibili/: api.py  downloader.py
