[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bilix"
dynamic = ["version"]
description = "⚡️Lightning-fast asynchronous download tool for bilibili and more"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "HFrost0", email = "hhlfrost@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiofiles>=0.8.0",
    "anyio",
    "click>=8.0.3",
    "httpx>=0.23.3",
    "pydantic>=2.5.3",
    "rich",
    "browser_cookie3>=0.17.1",
]

[project.scripts]
bilix = "bilix.cli.main:main"

[project.urls]
Homepage = "https://github.com/HFrost0/bilix"

[tool.hatch.version]
path = "bilix/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bilix",
]
